# qbittorrent-manual-cross-seed

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
