[project]
name = "qbittorrent-manual-cross-seed"
version = "1.0.0"
description = "A CLI tool to manually trigger cross-seed searches for qBittorrent torrents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["qbittorrent", "cross-seed", "torrent", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "qbittorrent-api>=2024.1.59",
    "requests>=2.31.0",
    "questionary>=2.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["black>=24.0.0"]

[project.scripts]
qbit-cross-seed = "main:main"

[project.urls]
Homepage = "https://github.com/SavageCore/qbittorrent-manual-cross-seed"
Repository = "https://github.com/SavageCore/qbittorrent-manual-cross-seed"
Issues = "https://github.com/SavageCore/qbittorrent-manual-cross-seed/issues"

[dependency-groups]
dev = ["black>=24.0.0"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
